# GPT-SoVITS-V3-Infer-API

./: .env.example  .gitignore  README.md  api-config.yaml  api-example.py  main.py  pyproject.toml
pretrained_models/: readme.txt
src/gpt_sovits/BigVGAN/: bigvgan.py  meldataset.py  utils0.py
src/gpt_sovits/BigVGAN/alias_free_activation/torch/: act.py  resample.py
src/gpt_sovits/f5_tts/model/: modules.py
src/gpt_sovits/f5_tts/model/backbones/: dit.py  mmdit.py  unett.py
src/gpt_sovits/infer/: inference.py  interface.py  text_utils.py
src/gpt_sovits/module/: models.py
src/gpt_sovits/text/: __init__.py
