[project]
name = "GPT-SoVITS-Infer"
version = "0.2.10"
description = "Inference code for GPT-SoVITS"
authors = [
    {name = "Yanli",email = "mail@yanli.one"},
]
dependencies = [
    "numpy>=1.26.4,<2",
    "scipy>=1.13.1",
    "librosa>=0.10.2.post1",
    "transformers>=4.41.2",
    "LangSegment>=0.3.3",
    "einops>=0.8.0",
    "matplotlib>=3.9.0",
    "cn2an>=0.5.22",
    "pypinyin>=0.51.0",
    "jieba-fast>=0.53",
    "pyopenjtalk>=0.3.3",
    "g2p-en>=2.1.0",
    "wordsegment>=1.3.1",
    "nltk>=3.8.1",
    "pydantic>=2.7.4",
    "sounddevice>=0.5.1",
    "ultralytics>=8.3.75",
    "torch==2.0.0",
    "torchvision==0.15.1",
    "torchaudio==2.0.0",
    "x-transformers>=2.0.4",
    "pytorch-lightning==2.1.3",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
]
requires-python = ">=3.10, <3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
runpod = [
    "runpod~=1.6",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[[tool.pdm.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu118"
include_packages = ["torch"]
exclude_packages = ["*"]